sumo/tests/sumo/extended/emitter/errors/routedist/false_id/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: MSTriggeredSource emitter: Route 'xxx' does not exist.
Quitting (on error).
